# ShareGratitude

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
backend/: .env.sample  database.py  db_drive.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py  utils.py
backend/routers/: auth.py  opinion.py  post.py  user.py
